ADD: vector api
Signed-off-by: Thomas Zamojski <thomas.zamojski@quadratic-labs.com>